fixed the x-overflow in the Navbar

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,11 +17,16 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 nav{
     padding: 1.6rem;
     background-image: linear-gradient(rgb(0, 0, 0),rgb(6, 17, 28));
     font-size: 1.5rem;
     height: 5.2rem;
+
 }
 
 
@@ -299,8 +304,21 @@ nav{
     .skills-container{
         grid-template-columns: auto;
     }
+    .skills-container .column{
+        padding: 0;
+    }
     .otherSkills{
         grid-template-columns: auto;
         margin-left: 0rem;
     }
+
+    .otherSkills ul li{
+        color: black;
+    }
+}
+
+.projects-container{
+    width: 80%;
+    margin: auto;
+    text-align: center;
 }
